--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
-    content="Bizbud, best bizbud, top website, power bizbud, 687edf53, 687edf53 github, mohammed hossam github, modysam, mohammed hossam, modysam projects, modysam profile, 687edf53 github profile, profile modysam, ">
+    content="Bizbud, best bizbud, top website, power bizbud, 687edf53, 687edf53 github, mohammed hossam github, modysam, mohammed hossam, modysam projects, modysam profile, 687edf53 github profile, profile modysam, BIZBUD, Bizbud 2023, Bizbud modysam, github bizbud">
   <meta name="description"
     content="this template i used it and download it using wix.com i used a lot of skills from my knowledge you can see my other projects on github.com">
   <meta name="author" content="Mohammed Hossam">
