--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!---------------------------- Nav  ------------------------------>
   <nav>
     <div class="logo">
-      <h2><a href="#">Bizbud || modysam</a></h2>
+      <h2><a href="#">Bizbud</a></h2>
     </div>
 
     <div class="nav-links">
